Use block strings instead of `String.format`